--- a/src/busposition/pom.xml
+++ b/src/busposition/pom.xml
@@ -4,11 +4,15 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.bus</groupId>
-	<artifactId>config</artifactId>
+	<artifactId>busposition</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+    <modules>
+        <module>client</module>
+		<module>server</module>
+	</modules>
+    <packaging>pom</packaging>
 
-	<name>config</name>
+	<name>busposition</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -26,20 +30,7 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-server</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
