--- a/src/api-gateway/pom.xml
+++ b/src/api-gateway/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.bus</groupId>
-	<artifactId>config</artifactId>
+	<artifactId>api-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>config</name>
+	<name>api-gateway</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -28,11 +28,15 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-server</artifactId>
+			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
 		</dependency>
 
 		<dependency>
@@ -53,6 +57,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
 
 	<repositories>
 		<repository>
@@ -91,6 +96,7 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
+
 	<build>
 		<plugins>
 			<plugin>
