--- a/src/schedule/pom.xml
+++ b/src/schedule/pom.xml
@@ -4,11 +4,16 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.bus</groupId>
-	<artifactId>config</artifactId>
+	<artifactId>schedule</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+    <modules>
+        <module>client</module>
+        <module>server</module>
+		<module>common</module>
+	</modules>
+    <packaging>pom</packaging>
 
-	<name>config</name>
+	<name>schedule</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -26,20 +31,7 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-server</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -91,6 +83,7 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
+
 	<build>
 		<plugins>
 			<plugin>
